Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59666

OSX: QSlider does not paint correct

XMLWordPrintable

    • macOS
    • 5cde07350c99d68c9d1f3d92e0a5057e2bcba0db

      Vertical QSlider does not paint its value correct (blue line) Horizontal slider shows it correct.

      Attached is the screenshot.

      This works good on earlier version of OSX 10.11

        1. Slider_2.jpeg
          Slider_2.jpeg
          21 kB
        2. untitled14.zip
          3 kB
        For Gerrit Dashboard: QTBUG-59666
        # Subject Branch Project Status CR V

            dedietri Gabriel de Dietrich (drgvond)
            irfan.omair@digia.com Irfan Omair
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes